--- a/package.json
+++ b/package.json
@@ -11,16 +11,31 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.7",
+    "@angular/animation": "^4.0.0-beta.8",
+    "@angular/animations": "^8.2.13",
+    "@angular/cdk": "^8.2.3",
     "@angular/common": "~8.2.7",
     "@angular/compiler": "~8.2.7",
     "@angular/core": "~8.2.7",
     "@angular/forms": "~8.2.7",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.7",
     "@angular/platform-browser-dynamic": "~8.2.7",
     "@angular/router": "~8.2.7",
+    "angular-datatables": "^8.0.0",
+    "datatables.net": "^1.10.20",
+    "datatables.net-buttons": "^1.6.1",
+    "datatables.net-buttons-dt": "^1.6.1",
+    "datatables.net-dt": "^1.10.20",
+    "datatables.net-select": "^1.3.1",
+    "datatables.net-select-dt": "^1.3.1",
+    "file-saver": "^2.0.2",
+    "jquery": "^3.4.1",
+    "jszip": "^3.2.2",
+    "ngx-cookie-service": "^2.2.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
+    "xlsx": "^0.15.3",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
@@ -28,9 +43,13 @@
     "@angular/cli": "~8.3.5",
     "@angular/compiler-cli": "~8.2.7",
     "@angular/language-service": "~8.2.7",
-    "@types/node": "~8.9.4",
+    "@types/datatables.net": "^1.10.18",
+    "@types/datatables.net-buttons": "^1.4.3",
+    "@types/datatables.net-select": "^1.2.6",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jquery": "^3.3.31",
+    "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
