--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,9 @@
               "src/styles.scss",
               "node_modules/datatables.net-dt/css/jquery.dataTables.css",
               "node_modules/datatables.net-buttons-dt/css/buttons.dataTables.css",
-              "node_modules/datatables.net-select-dt/css/select.dataTables.css"
+              "node_modules/datatables.net-select-dt/css/select.dataTables.css",
+              "node_modules/angular-bootstrap-md/assets/scss/bootstrap/bootstrap.scss",
+              "node_modules/angular-bootstrap-md/assets/scss/mdb.scss",
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.js",
