--- a/angular.json
+++ b/angular.json
@@ -35,6 +35,7 @@
               "node_modules/datatables.net-select-dt/css/select.dataTables.css",
               "node_modules/angular-bootstrap-md/assets/scss/bootstrap/bootstrap.scss",
               "node_modules/angular-bootstrap-md/assets/scss/mdb.scss",
+              "node_modules/font-awesome/css/font-awesome.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.js",
