--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~8.2.7",
     "angular-bootstrap-md": "^8.8.1",
     "angular-datatables": "^8.0.0",
+    "angular-font-awesome": "^3.1.2",
     "datatables.net": "^1.10.20",
     "datatables.net-buttons": "^1.6.1",
     "datatables.net-buttons-dt": "^1.6.1",
@@ -31,6 +32,7 @@
     "datatables.net-select": "^1.3.1",
     "datatables.net-select-dt": "^1.3.1",
     "file-saver": "^2.0.2",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
     "jszip": "^3.2.2",
     "ngx-cookie-service": "^2.2.0",
@@ -40,7 +42,7 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.5",
+    "@angular-devkit/build-angular": "^0.803.21",
     "@angular/cli": "~8.3.5",
     "@angular/compiler-cli": "~8.2.7",
     "@angular/language-service": "~8.2.7",
