--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
   "private": true,
   "dependencies": {
     "@angular/animation": "^4.0.0-beta.8",
-    "@angular/animations": "^8.2.13",
+    "@angular/animations": "^8.2.14",
     "@angular/cdk": "^8.2.3",
-    "@angular/common": "~8.2.7",
-    "@angular/compiler": "~8.2.7",
-    "@angular/core": "~8.2.7",
-    "@angular/forms": "~8.2.7",
+    "@angular/common": "^8.2.14",
+    "@angular/compiler": "^8.2.14",
+    "@angular/core": "^8.2.14",
+    "@angular/forms": "^8.2.14",
     "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "~8.2.7",
-    "@angular/platform-browser-dynamic": "~8.2.7",
-    "@angular/router": "~8.2.7",
+    "@angular/platform-browser": "^8.2.14",
+    "@angular/platform-browser-dynamic": "^8.2.14",
+    "@angular/router": "^8.2.14",
     "angular-bootstrap-md": "^8.8.1",
     "angular-datatables": "^8.0.0",
     "angular-font-awesome": "^3.1.2",
@@ -35,17 +35,17 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
     "jszip": "^3.2.2",
-    "ngx-cookie-service": "^2.2.0",
+    "ngx-cookie-service": "^2.3.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
-    "xlsx": "^0.15.3",
+    "xlsx": "^0.15.4",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.803.21",
-    "@angular/cli": "~8.3.5",
-    "@angular/compiler-cli": "~8.2.7",
-    "@angular/language-service": "~8.2.7",
+    "@angular/cli": "^8.3.21",
+    "@angular/compiler-cli": "^8.2.14",
+    "@angular/language-service": "^8.2.14",
     "@types/datatables.net": "^1.10.18",
     "@types/datatables.net-buttons": "^1.4.3",
     "@types/datatables.net-select": "^1.2.6",
@@ -53,14 +53,14 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/jquery": "^3.3.31",
     "@types/node": "~8.9.4",
-    "codelyzer": "^5.0.0",
+    "codelyzer": "^5.2.1",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
+    "karma-jasmine-html-reporter": "^1.5.1",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
